--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </header>
     <section id="main">
       <h1>本文</h1>
+      <img id="pacman_jump_picture" src="img/pacman_jump.png" alt="good mark">
     <article class="box">
       <h2>本文１</h2>
       <p>本文１</p>
